force-app/main/default/objects/Work_Order__c/fields/Active_Sub_WO_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Sub_WO_Count__c</fullName>
    <description>Count of open child sub-work-orders on the parent. System-maintained (self-lookup, so DLRS or Apex, not native rollup). Work Order tier spec Section 7.1.</description>
    <label>Sub-WO Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>