force-app/main/default/objects/Work_Order__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total actual time on this Work Order in hours. Populated by flow when foreman enters Actual_Minutes__c on Work Order Line Items (sum / 60). Updated by LOVING_WO_Hours_Recalc flow on WOLI save. Used by Measuring Cup and FJ variance analysis.</description>
    <label>Actual Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>