force-app/main/default/objects/Work_Order__c/fields/Actual_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sod_Sqft__c</fullName>
    <description>Actual sod square footage installed at closeout. May differ from Sod_Sqft__c due to site conditions or scope changes.</description>
    <label>Actual Sod Sq Ft</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>