force-app/main/default/objects/Work_Order__c/fields/Actual_Tree_Count__c.field-meta.xml
<CustomField>
    <fullName>Actual_Tree_Count__c</fullName>
    <description>Actual number of trees installed at closeout.</description>
    <label>Actual Tree Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>