force-app/main/default/objects/Work_Order__c/fields/Approval_Process_Completed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Process Completed</label>
    <type>Checkbox</type>
</CustomField>