force-app/main/default/objects/Work_Order__c/fields/Arrival_Lat__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Lat__c</fullName>
    <description>Stage 9. Crew arrival latitude stamped from GPS ping at geofence entry.</description>
    <label>Arrival Latitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>