force-app/main/default/objects/Work_Order__c/fields/Arrival_Lng__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Lng__c</fullName>
    <description>Stage 9. Crew arrival longitude stamped from GPS ping at geofence entry.</description>
    <label>Arrival Longitude</label>
    <precision>9</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>