force-app/main/default/objects/Work_Order__c/fields/Arrived_At__c.field-meta.xml
<CustomField>
    <fullName>Arrived_At__c</fullName>
    <description>Stage 9. Set by GPS REST ping when crew enters geofence. Auto-flips Status to In Progress.</description>
    <label>Arrived At</label>
    <type>DateTime</type>
</CustomField>