force-app/main/default/objects/Work_Order__c/fields/Billable_Type__c.field-meta.xml
<CustomField>
    <fullName>Billable_Type__c</fullName>
    <label>Billable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billable (PO)</fullName>
            </value>
            <value>
                <fullName>Warranty (No Charge)</fullName>
            </value>
            <value>
                <fullName>FJ Internal</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>