force-app/main/default/objects/Work_Order__c/fields/Builder_PO__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder PO</label>
    <referenceTo>Builder_PO__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>