force-app/main/default/objects/Work_Order__c/fields/Builder_PO_Timing_Rule__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO_Timing_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder PO Timing Rule</label>
    <referenceTo>Builder_PO_Timing_Rule__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders_Timing_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>