force-app/main/default/objects/Work_Order__c/fields/Builder_PO_Timing_Status__c.field-meta.xml
<CustomField>
    <fullName>Builder_PO_Timing_Status__c</fullName>
    <label>Builder PO Timing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Too Early</fullName>
            </value>
            <value>
                <fullName>In Expected Window</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Missing Rule</fullName>
            </value>
            <value>
                <fullName>Missing Dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>