force-app/main/default/objects/Work_Order__c/fields/Calculated_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Duration_Minutes__c</fullName>
    <description>Final calculated duration in minutes after any adjustment. Used to populate Service Appointment Duration. When Duration_Override__c is set, uses the override value instead.</description>
    <label>Calculated Duration Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>