force-app/main/default/objects/Work_Order__c/fields/Calculated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Start_Date__c</fullName>
    <description>Auto-calculated: PO Release Date + Release Schedule Days from Community (if set) or Division Account. Shows the expected start date when no explicit Target Start Date is on the PO. Used as fallback for Days Until Start and pipeline bucket calculation.</description>
    <formula>IF(NOT(ISBLANK(Community__r.Release_Schedule_Days__c)), PO_Received_Date__c + Community__r.Release_Schedule_Days__c, IF(NOT(ISBLANK(Builder_Market_Account__r.Release_Schedule_Days__c)), PO_Received_Date__c + Builder_Market_Account__r.Release_Schedule_Days__c, PO_Received_Date__c))</formula>
    <label>Calculated Start Date</label>
    <type>Date</type>
</CustomField>