force-app/main/default/objects/Work_Order__c/fields/Closeout_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Notes__c</fullName>
    <label>Closeout Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>