force-app/main/default/objects/Work_Order__c/fields/Closeout_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submitted the Work Order for closeout review. Set by flow when Status transitions to Pending Closeout.</description>
    <label>Closeout Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Closeout Submitted)</relationshipLabel>
    <relationshipName>Closeout_Submitted_WOs</relationshipName>
    <type>Lookup</type>
</CustomField>