force-app/main/default/objects/Work_Order__c/fields/Closeout_Submitted_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Submitted_DateTime__c</fullName>
    <description>Date and time when the Work Order was submitted for closeout review. Set by flow alongside Closeout_Submitted_By__c. Used for SLA tracking and closeout queue aging.</description>
    <label>Closeout Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>