force-app/main/default/objects/Work_Order__c/fields/Closeout_Warning__c.field-meta.xml
<CustomField>
    <fullName>Closeout_Warning__c</fullName>
    <label>Closeout Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>