force-app/main/default/objects/Work_Order__c/fields/ClosingCare_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>ClosingCare_Exit_Date__c</fullName>
    <label>ClosingCare Exit Date</label>
    <type>Date</type>
</CustomField>