force-app/main/default/objects/Work_Order__c/fields/ClosingCare_Exit_Reason__c.field-meta.xml
<CustomField>
    <fullName>ClosingCare_Exit_Reason__c</fullName>
    <label>ClosingCare Exit Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>