force-app/main/default/objects/Work_Order__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community</label>
    <referenceTo>Community__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Community_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>