force-app/main/default/objects/Work_Order__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific community package this work order is executing against. Drives scope, pricing, and crew allocation.</description>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>