force-app/main/default/objects/Work_Order__c/fields/Construction_Manager__c.field-meta.xml
<CustomField>
    <fullName>Construction_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (CM)</relationshipLabel>
    <relationshipName>Work_Orders_As_CM</relationshipName>
    <type>Lookup</type>
</CustomField>