force-app/main/default/objects/Work_Order__c/fields/Crew__c.field-meta.xml
<CustomField>
    <fullName>Crew__c</fullName>
    <label>Crew</label>
    <length>255</length>
    <type>Text</type>
</CustomField>