force-app/main/default/objects/Work_Order__c/fields/Crew_Extended__c.field-meta.xml
<CustomField>
    <fullName>Crew_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew Extended</label>
    <type>Checkbox</type>
</CustomField>