force-app/main/default/objects/Work_Order__c/fields/Crew_Extension_Notes__c.field-meta.xml
<CustomField>
    <fullName>Crew_Extension_Notes__c</fullName>
    <label>Crew Extension Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>