force-app/main/default/objects/Work_Order__c/fields/Customer_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Report__c</fullName>
    <label>Customer Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>