force-app/main/default/objects/Work_Order__c/fields/Days_To_Estimated_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Estimated_Start__c</fullName>
    <label>Days to Estimated Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>