force-app/main/default/objects/Work_Order__c/fields/Days_Until_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Start__c</fullName>
    <description>Days from today to Target Start Date (or Calculated Start Date if no explicit date). Negative = past due. Drives pipeline bucket assignment. 999 = no date set (stays in 90+ bucket). Recalculates automatically every day.</description>
    <formula>IF(
  NOT(ISBLANK(Requested_Install_Date__c)),
  Requested_Install_Date__c - TODAY(),
  IF(
    NOT(ISBLANK(Calculated_Start_Date__c)),
    Calculated_Start_Date__c - TODAY(),
    999
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>