force-app/main/default/objects/Work_Order__c/fields/Delivery_Issue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Issue_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true when Delivery_Quality_Check__c shows a failure</description>
    <label>Delivery Issue Flag</label>
    <type>Checkbox</type>
</CustomField>