force-app/main/default/objects/Work_Order__c/fields/Delivery_QC_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_QC_Status__c</fullName>
    <description>Passed; Failed; Not Required (no sod/mulch); Pending</description>
    <label>Delivery QC Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>