force-app/main/default/objects/Work_Order__c/fields/Division_Account__c.field-meta.xml
<CustomField>
    <fullName>Division_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Division Account)</relationshipLabel>
    <relationshipName>Work_Orders_Division</relationshipName>
    <type>Lookup</type>
</CustomField>