force-app/main/default/objects/Work_Order__c/fields/Drive_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Drive_Started_At__c</fullName>
    <description>Stage 9. Set by GPS REST beginDrive when crew leaves shop. Requires Vehicle_Check_Completed and Loading_Check_Completed.</description>
    <label>Drive Started At</label>
    <type>DateTime</type>
</CustomField>