force-app/main/default/objects/Work_Order__c/fields/Duration_Last_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>Duration_Last_Calculated_At__c</fullName>
    <description>DateTime when WLRDurationCalculationService last ran for this Work Order. Useful for detecting stale calculations when line items change after initial calculation.</description>
    <label>Duration Last Calculated At</label>
    <type>DateTime</type>
</CustomField>