force-app/main/default/objects/Work_Order__c/fields/Duration_Override__c.field-meta.xml
<CustomField>
    <fullName>Duration_Override__c</fullName>
    <description>Manual override for Calculated_Duration_Minutes__c. When populated, WLRDurationCalculationService uses this value instead of the calculated total. Requires Duration_Override_Reason__c. Sets Duration_Source__c to Manual Override.</description>
    <label>Duration Override (Minutes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>