force-app/main/default/objects/Work_Order__c/fields/Duration_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Duration_Override_Reason__c</fullName>
    <description>Required when Duration_Override__c is set. Records why the scheduler manually overrode the WLR-calculated duration (e.g. unusual site conditions, scope change, crew size adjustment).</description>
    <label>Duration Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>