force-app/main/default/objects/Work_Order__c/fields/Duration_Source__c.field-meta.xml
<CustomField>
    <fullName>Duration_Source__c</fullName>
    <description>How the Calculated_Duration_Minutes__c value was determined. Calculated from WLR = all or most lines matched WLR standards. Partial WLR = some lines matched, some missing. Manual Override = scheduler entered duration manually. Missing Standards = no WLR matches found. No Line Items = WO has no line items to calculate from.</description>
    <label>Duration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculated from WLR</fullName>
            </value>
            <value>
                <fullName>Partial WLR</fullName>
                <label>Partial WLR (some lines missing standard)</label>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
            <value>
                <fullName>Missing Standards</fullName>
            </value>
            <value>
                <fullName>No Line Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>