force-app/main/default/objects/Work_Order__c/fields/Eight11_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Eight11_Task_Status__c</fullName>
    <label>811 Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Filed</fullName>
                <default>true</default>
                <label>Not Filed</label>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Pending Locate</fullName>
            </value>
            <value>
                <fullName>Marked</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>