force-app/main/default/objects/Work_Order__c/fields/EPO_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>EPO_Days_Open__c</fullName>
    <formula>IF( ISBLANK(EPO_Sent_Date__c), null, TODAY() - EPO_Sent_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPO Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>