force-app/main/default/objects/Work_Order__c/fields/EPO_Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>EPO_Days_Outstanding__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(EPO_Sent_Date__c)), ISPICKVAL(EPO_Status__c, &quot;Sent&quot;)), TODAY() - EPO_Sent_Date__c, 0)</formula>
    <label>EPO Days Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>