force-app/main/default/objects/Work_Order__c/fields/EPO_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Received_Date__c</fullName>
    <label>EPO Received Date</label>
    <type>DateTime</type>
</CustomField>