force-app/main/default/objects/Work_Order__c/fields/EPO_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>EPO_Sent_Date__c</fullName>
    <label>EPO Sent Date</label>
    <type>Date</type>
</CustomField>