force-app/main/default/objects/Work_Order__c/fields/EPO_SLA_Breach__c.field-meta.xml
<CustomField>
    <fullName>EPO_SLA_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPO SLA Breach</label>
    <type>Checkbox</type>
</CustomField>