force-app/main/default/objects/Work_Order__c/fields/EPO_SLA_Tier__c.field-meta.xml
<CustomField>
    <fullName>EPO_SLA_Tier__c</fullName>
    <formula>IF(EPO_Days_Outstanding__c &gt;= 5, &quot;Red&quot;,
        IF(EPO_Days_Outstanding__c &gt;= 4, &quot;Orange&quot;,
        IF(EPO_Days_Outstanding__c &gt;= 3, &quot;Yellow&quot;, &quot;Green&quot;)))</formula>
    <label>EPO SLA Tier</label>
    <type>Text</type>
</CustomField>