force-app/main/default/objects/Work_Order__c/fields/EPO_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>EPO_Status_Color__c</fullName>
    <formula>IF( ISBLANK(EPO_Sent_Date__c), &quot;&quot;,
        IF( EPO_Days_Open__c &lt;= 2, &quot;Green&quot;,
        IF( EPO_Days_Open__c = 3, &quot;Yellow&quot;,
        IF( EPO_Days_Open__c = 4, &quot;Orange&quot;,
        &quot;Red&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPO Status Color</label>
    <type>Text</type>
</CustomField>