force-app/main/default/objects/Work_Order__c/fields/Estimated_Labor_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Labor_Minutes__c</fullName>
    <description>Sum of Estimated_Line_Minutes__c across all active Work Order Line Items. Populated by WLRDurationCalculationService (invocable from flow). This is the raw labor time before crew-size adjustment. Used to set Service Appointment Duration.</description>
    <label>Estimated Labor Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>