force-app/main/default/objects/Work_Order__c/fields/Field_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Complete_Date__c</fullName>
    <description>Date and time when the field crew completed work on this Work Order. Set by the Foreman app on job completion.</description>
    <label>Field Complete Date</label>
    <type>DateTime</type>
</CustomField>