force-app/main/default/objects/Work_Order__c/fields/Field_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Field Manager)</relationshipLabel>
    <relationshipName>Work_Orders_Field_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>