force-app/main/default/objects/Work_Order__c/fields/FJ_Created_By_FM__c.field-meta.xml
<CustomField>
    <fullName>FJ_Created_By_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Audit trail — FMs create FJs, foremen do not</description>
    <label>FJ Created By FM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders_FJ_Created_By</relationshipName>
    <type>Lookup</type>
</CustomField>