force-app/main/default/objects/Work_Order__c/fields/FJ_Original_Foreman__c.field-meta.xml
<CustomField>
    <fullName>FJ_Original_Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Foreman whose work generated the FJ</description>
    <label>FJ Original Foreman</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders_FJ_Original_Foreman</relationshipName>
    <type>Lookup</type>
</CustomField>