force-app/main/default/objects/Work_Order__c/fields/FJ_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>FJ_Reason_Code__c</fullName>
    <label>FJ Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Builder Change Order</fullName>
            </value>
            <value>
                <fullName>Incomplete Install</fullName>
            </value>
            <value>
                <fullName>Loading Error</fullName>
            </value>
            <value>
                <fullName>Material Shortage</fullName>
            </value>
            <value>
                <fullName>Missed Punch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Site Change</fullName>
            </value>
            <value>
                <fullName>Weather Cutoff</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>