force-app/main/default/objects/Work_Order__c/fields/FJ_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>FJ_Reason_Detail__c</fullName>
    <label>FJ Reason Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>