force-app/main/default/objects/Work_Order__c/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders_FM</relationshipName>
    <type>Lookup</type>
</CustomField>