force-app/main/default/objects/Work_Order__c/fields/Foreman__c.field-meta.xml
<CustomField>
    <fullName>Foreman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreman</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Foreman)</relationshipLabel>
    <relationshipName>Work_Orders_Foreman</relationshipName>
    <type>Lookup</type>
</CustomField>