force-app/main/default/objects/Work_Order__c/fields/FSL_Crew_Complete__c.field-meta.xml
<CustomField>
    <fullName>FSL_Crew_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSL Crew Complete</label>
    <type>Checkbox</type>
</CustomField>