force-app/main/default/objects/Work_Order__c/fields/Geofence_Radius_M__c.field-meta.xml
<CustomField>
    <fullName>Geofence_Radius_M__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Stage 9. Geofence radius in meters used by GPS auto-arrival. Default 150m.</description>
    <label>Geofence Radius (m)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>