force-app/main/default/objects/Work_Order__c/fields/Goal_Hours__c.field-meta.xml
<CustomField>
    <fullName>Goal_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total goal time for this Work Order in hours. Populated by flow when Work Order Line Items are created or updated (sum of WOLI.Goal_Minutes__c / 60). Not a roll-up — updated by LOVING_WO_Hours_Recalc flow. Used for crew capacity planning and Measuring Cup variance.</description>
    <label>Goal Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>